@@ -1,3 +1,5 @@
 usr/share/apport/*qt*
 usr/share/apport/*.ui
 #../../qt4/apport-qt.desktop usr/share/applications
+../../qt4/apport-qt-mime.desktop usr/share/applications
+../../qt4/apport-qt-mimelnk.desktop usr/share/mimelnk/text
