@@ -1,6 +1,6 @@
 top_srcdir = ..
 
-all: apport-qt.desktop
+all: apport-qt.desktop apport-qt-mime.desktop apport-qt-mimelnk.desktop
 
 %.desktop : %.desktop.in
 	intltool-merge -d ${top_srcdir}/po/ $< $@
