@@ -1,0 +1,11 @@
+[Desktop Entry]
+_Name=Report a problem...
+_Comment=Report a malfunction to the developers
+Exec=/usr/share/apport/apport-qt -c %f
+Icon=apport
+Terminal=false
+Type=Application
+MimeType=text/x-apport;
+Categories=KDE;Core;
+NoDisplay=true
+StartupNotify=true
